# gala

./: meson.build
.github/workflows/: main.yml
data/: gala.metainfo.xml.in  io.elementary.desktop.wm.shell
lib/: SessionSettings.vala  WindowManager.vala  meson.build
po/: aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+169 more)
src/: DaemonManager.vala  LockScreenManager.vala  Main.vala  WindowManager.vala  meson.build
src/ShellClients/: HideTracker.vala  ManagedClient.vala  NotificationsClient.vala  ShellClientsManager.vala
src/Widgets/: LockScreen.vala  ModalGroup.vala
src/Widgets/MultitaskingView/: MultitaskingView.vala  WindowClone.vala
tests/: TestCase.vala  meson.build
tests/lib/: GestureControllerTest.vala  Main.vala  meson.build
tests/src/: DockTest.vala  GalaSetupTest.vala  GalaTestCase.vala  Main.vala  meson.build
